# Rust-tings

./: .gitignore  README.md
alternate_start/: main.rs
cat-theory/: Cargo.toml
cleverbot-bot/: Cargo.toml
cleverbot-bot/src/: archive.rs  cleverbot.rs  main.rs
cleverbot-bot/src/utils/: queue.rs
clevreq/: Cargo.toml
clevreq/src/: main.rs
cli-scaffolder/attempt1/: Cargo.toml
cli-scaffolder/attempt1/proj1/: main.py
cli-scaffolder/attempt1/src/: main.rs
dioxus-test/app/: Cargo.toml
dioxus-test/app/src/: main.rs
dioxus-test/app2/: Cargo.toml  Dioxus.toml
dsa/double-inversions/: Cargo.toml  todos.txt
dsa/double-inversions/src/: main.rs  max_queue.rs
dsa/loan/: Cargo.toml
dsa/loan/src/: main.rs
dsa/merge-sort/: Cargo.toml
dsa/merge-sort/src/: main.rs
dsa/time-complexity-analyzer/: Cargo.toml
dsa/time-complexity-analyzer/src/: main.rs
equations/src/: main.rs
eventide/: Cargo.toml
eventide/src/: main.rs  temp.rs  temp2.rs  v1.rs  v2.rs  v3.rs
exercises/src/: command_maker.rs  coord_geo.rs  departments_app.rs  errors.rs  fibonacci.rs  intervals.rs  lists_questionmark.rs  main.rs  mini_grep.rs  mult_table.rs  vectors_dicts.rs  zigzag.rs
ffmpeg/attempt1/: Cargo.toml
first_rs_bot/: Cargo.toml
first_rs_bot/src/: main.rs
french-axum-tutorial/: Cargo.toml  wtf.txt
french-axum-tutorial/src/: ctx.rs  error.rs  main.rs  model.rs
french-axum-tutorial/src/web/: mod.rs  mw_auth.rs  routes_hello.rs  routes_login.rs  routes_tickets.rs
french-axum-tutorial/tests/: quick_dev.rs
guessing_game/src/: main.rs
handy-hardware-moment/: Cargo.toml  sql.sql
handy-hardware-moment/migrations/: 20240319211035_first.sql
handy-hardware-moment/src/: main.rs
handy-hardware-moment/src/models/: customer.rs  product.rs
hell_world/src/: arrays.rs  basics.rs  boxes.rs  boxes2.rs  closures.rs  enum_q.rs  enums.rs  functions.rs  hashmaps.rs  linked_list.rs  main.rs  more_ownership.rs  structs.rs  traits.rs  vectors.rs  zigzag_iter.rs
iced-text-editor/: Cargo.toml
iced-text-editor/src/: main.rs
lambda/: Cargo.toml  env-vars-guide.txt
lambdas/rust-add/: Cargo.toml
lambdas/rust-add-eu/: Cargo.toml
lambdas/rust-add-eu/src/: main.rs
lambdas/rust-add/src/: main.rs
leet-code/: Cargo.toml
magic-tram/: Cargo.toml  task.txt
magic-tram/src/: main.rs
marco-proc-testing/: Cargo.toml
marco-proc-testing/hello_macro_derive/src/: lib.rs
marco-proc-testing/src/: main.rs
marco-proc-workspace/: Cargo.toml  TODOS.md
marco-proc-workspace/bot/: Cargo.toml
marco-proc-workspace/bot/src/: main.rs
marco-proc-workspace/hello_macro/src/: lib.rs
marco-proc-workspace/hello_macro_derive/: Cargo.toml
marco-proc-workspace/hello_macro_derive/src/: lib.rs  table_impl.rs
marco-testing/: Cargo.toml
marco-testing/src/: main.rs
minesweeper/: Cargo.toml
minesweeper/src/: main.rs  v1.rs  v2.rs
mini_grep/: output.txt
mini_grep/src/: lib.rs  main.rs  tests.rs
networking-emulation/l1/: Cargo.toml
networking-emulation/l1/src/: main.rs
networking-emulation/tcpip/: Cargo.toml
networking-emulation/tcpip/src/: main.rs
networking-v2/: Cargo.toml
networking-v2/src/: main.rs
os/: Cargo.toml  README.md
os/.cargo/: config.toml
os/src/: main.rs  vga_buffer.rs
poise-bot/: Cargo.toml
poise-bot/src/: cleverbot.rs  main.rs
rust-image-release-test/: Cargo.toml
rust-image-release-test/src/: main.rs
showmyip/: Cargo.toml
showmyip/src/: main.rs
shuttle-bot/--serenity/: Cargo.toml
shuttle-bot/attempt2ig/: Cargo.toml
shuttle-bot/attempt3/: Cargo.toml
stickeries/: Cargo.toml
stickeries/src/: main.rs
tf2noisemaker/: Cargo.toml
tf2noisemaker/src/: main.rs
the-cat-with-horns/: .gitignore  Cargo.toml
the-cat-with-horns/.sqlx/: query-9c9fbf6884338b16cc567620f19d39eda486b02fe489971a8c34b5329c750dce.json
the-cat-with-horns/migrations/: 20231119002506_migrations.sql  20231119005737_migrations.sql  20231122094839_migrations.sql  20231122144749_servers_channels.sql  20231124150204_ocs.sql  20231124194136_ocv2.sql
the-cat-with-horns/src/: main.rs
the-cat-with-horns/src/commands/: admin.rs  events.rs  fun.rs  info.rs  owner.rs  randomizer.rs
the-cat-with-horns/src/commands/db_access/: general.rs  oc.rs  popequote.rs
the-cat-with-horns/src/helpers/: datetime.rs  discord.rs  misc.rs  my_embeds.rs  popequotestruct.rs
vv-radio/: Cargo.toml
wasm-canvas/: Cargo.toml  README.md  index.html
wasm-canvas/src/: lib.rs
web-server-from-book/: 404.html  Cargo.toml
web-server-from-book/archive/: single-threaded.rs
web-server-from-book/src/: lib.rs
worker-v2/: Cargo.toml  tutorial.txt  wrangler.toml
worker-v2/src/: lib.rs
youtube-downloader (lots of web stuff)/axum-react-tutorial/wschat-react-rust/: vite.config.ts
youtube-downloader (lots of web stuff)/more-efficient-downloads/backend/: Cargo.toml
youtube-downloader (lots of web stuff)/more-efficient-downloads/backend/src/: main.rs
youtube-downloader (lots of web stuff)/rocket-testing/: Cargo.toml
youtube-downloader (lots of web stuff)/rocket-testing/static/: socials.html
youtube-downloader (lots of web stuff)/testing/src/: main.rs
youtube-downloader (lots of web stuff)/testing3/: Cargo.toml
youtube-downloader (lots of web stuff)/testing3/src/: main.rs
youtube-downloader (lots of web stuff)/timetabler/: package-lock.json  package.json  vite.config.ts
youtube-downloader (lots of web stuff)/timetabler/API/: .gitignore  Cargo.toml
youtube-downloader (lots of web stuff)/timetabler/src/: App.tsx
youtube-downloader (lots of web stuff)/yew-testing/: Cargo.toml
youtube-downloader (lots of web stuff)/yew-testing/src/: video.rs
youtube-downloader/axum-react-tutorial/wschat-react-rust/: package-lock.json  package.json
youtube-downloader/rocket-testing/: Cargo.toml
youtube-downloader/rocket-testing/src/: main.rs
youtube-downloader/testing/: Cargo.toml
youtube-downloader/testing2/: Cargo.toml
(+20 files in other folders)
