[package]
name = "cleverbot-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version="0.11.20", features = ["blocking", "json"] }
tokio = { version = "1.32.0", features = ["full"] }

