[package]
name = "french-axum-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { verison = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower-cookies = "0.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
