[package]
name = "notsocleverbot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.25.0"
shuttle-runtime = "0.25.0"
shuttle-secrets = "0.25.0"
shuttle-static-folder = "0.25.0"
tracing = "0.1.37"
tokio = "1.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version="0.11.20", features = ["json"] }
chrono = "0.4.30"
urlencoding = "2.1.3"

