[package]
name = "thecatwithhorns"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.32.0"
shuttle-runtime = "0.32.0"
shuttle-secrets = "0.32.0"
tracing = "0.1.37"
tokio = "1.26.0"
reqwest = "0.11.22"
serde_json = "1.0.108"
rand = "0.8.5"
ordinal = "0.3.2"
