[package]
name = "vv-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.20.1"
windows = { version = "0.48", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "implement",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media_Audio_Endpoints"
] }
