[package]
name = "wasm-canvas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.74"
wasm-bindgen = "0.2.97"
web-sys = { version = "0.3.74", features = ['CanvasRenderingContext2d', 'Document', 'Element', 'HtmlCanvasElement', 'Window'] }
tokio = { version = "1" ,features = ["full"] }
poise = "0.6.1"

