[package]
name = "worker-v2"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.2.0", features=['http'] }
worker-macros = { version="0.2.0", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
serde = "1.0.204"
serde_json = "1.0.120"
reqwest = "0.12.5"
