[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path="../hello_macro_derive" }
rand = "0.8.5"
sqlx = { version = "0.7.3", features = ["postgres", "migrate", "runtime-tokio-native-tls"] }
poise = "0.5.7"