[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.0"
rocket = {version="0.5.0-rc.2", features = ["json"]}
tokio = { version = "1", features = ["full"] }
ureq = "2.7.1"
